sw-hw-auth: rename prebuilt auth.o to sw_auth.o. changes to makefile.
The file was renamed to be consistent with other ASUS source code releases.
Changes were made to the makefile to accommadate the name change.

--- a/release/src/router/sw-hw-auth/Makefile
+++ b/release/src/router/sw-hw-auth/Makefile
@@ -21,7 +21,7 @@ ifeq ($(RTCONFIG_QTN),y)
 LDFLAGS += -L$(TOP)/libqcsapi_client -lqcsapi_client
 endif
 
-OBJS = auth.o hw_auth.o
+OBJS = sw_auth.o hw_auth.o
 
 all :
 
