--- a/release/src/router/shared/Makefile
+++ b/release/src/router/shared/Makefile
@@ -306,13 +306,13 @@ vpath %.c sysdeps/broadcom  $(SRCBASE)/shared/bcmwifi/src
 endif
 
 ifeq ($(RTCONFIG_SW_HW_AUTH),y)
-OBJS += auth.o hw_auth.o
+OBJS += sw_auth.o hw_auth.o
 CFLAGS  += -I$(TOP)/sw-hw-auth
-ifeq ($(wildcard $(SRCBASE)/router/sw-hw-auth/*.c),)
-vpath %.o $(TOP)/sw-hw-auth/prebuild
-else
+#ifeq ($(wildcard $(SRCBASE)/router/sw-hw-auth/*.c),)
+#vpath %.o $(TOP)/sw-hw-auth/prebuild
+#else
 vpath %.c $(TOP)/sw-hw-auth
-endif
+#endif
 endif
 
 all: libshared.so libshared.a
@@ -345,6 +345,16 @@ clean:
 private.o:
 ifneq ($(wildcard ./prebuild/private.o),)
 	@-cp -f ./prebuild/private.o .
+endif
+
+sw_auth.o:
+ifeq ($(wildcard $(SRCBASE)/router/sw-hw-auth/*.c),)
+	cp -f $(TOP)/sw-hw-auth/prebuild/sw_auth.o ./
+endif
+
+hw_auth.o:
+ifeq ($(wildcard $(SRCBASE)/router/sw-hw-auth/*.c),)
+	cp -f $(TOP)/sw-hw-auth/prebuild/hw_auth.o ./
 endif
 
 ifeq ($(RTCONFIG_USB),y)
